--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,6 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
+	<nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+        <a class="navbar-brand" href="#">{{name}}</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a href="{% url 'main:logout' %}">
+            <button>
+                Logout
+            </button>
+        </a>
+        </div>
+    </nav>
     <h1>Shopping List Page</h1>
 
     <h5>Name:</h5>
